Fix: :focus-visible pseudo class for link, and border gap on image.

--- a/src/styles/dog-tree.module.scss
+++ b/src/styles/dog-tree.module.scss
@@ -22,7 +22,6 @@ div.bottom {
   img.puppyGroup {
     width: 600px;
     height: auto;
-    border-radius: Theme.$bigButtonRadius;
     object-fit: cover;
   }
 }
